[package]
name = "requires"
version = "0.1.0"
authors = ["Dodo <kasper199914@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {git = "https://github.com/dtolnay/syn", features = ["full", "extra-traits", "printing"]}
proc-macro2 = {version = "1.0"}
quote = "*"